Adjusted network settings and added reboot